--- a/assignment1/softmax.ipynb
+++ b/assignment1/softmax.ipynb
@@ -151,14 +151,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "loss: 2.372182\n",
+      "sanity check: 2.302585\n"
+     ]
+    }
+   ],
    "source": [
     "# First implement the naive softmax loss function with nested loops.\n",
     "# Open the file cs231n/classifiers/softmax.py and implement the\n",
     "# softmax_loss_naive function.\n",
-    "\n",
     "from cs231n.classifiers.softmax import softmax_loss_naive\n",
     "import time\n",
     "\n",
