--- a/assignment1/softmax.ipynb
+++ b/assignment1/softmax.ipynb
@@ -158,7 +158,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "loss: 2.443371\n",
+      "loss: 2.371611\n",
       "sanity check: 2.302585\n"
      ]
     }
@@ -189,17 +189,44 @@
    "source": [
     "**Inline Question 1**\n",
     "\n",
-    "Why do we expect our loss to be close to -log(0.1)? Explain briefly.**\n",
+    "Why do we expect our loss to be close to -log(0.1)? Explain briefly.\n",
     "\n",
-    "$\\color{blue}{\\textit Your Answer:}$ *Fill this in* \n",
+    "$\\color{blue}{\\textit Your Answer:}$ *The probability of each class is about 0.1 after random initialization without any training process. So according to the definition of the cross-entropy loss, it is expected to be close to -log(0.1).* \n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "numerical: -0.476431 analytic: -0.476431, relative error: 1.847975e-08\n",
+      "numerical: 0.085244 analytic: 0.085244, relative error: 3.345259e-07\n",
+      "numerical: 0.903757 analytic: 0.903757, relative error: 5.967138e-08\n",
+      "numerical: -0.742614 analytic: -0.742614, relative error: 5.791287e-08\n",
+      "numerical: 1.263709 analytic: 1.263709, relative error: 7.744545e-08\n",
+      "numerical: 1.795868 analytic: 1.795868, relative error: 2.086808e-08\n",
+      "numerical: -0.247700 analytic: -0.247700, relative error: 5.634689e-08\n",
+      "numerical: -0.088726 analytic: -0.088726, relative error: 6.098763e-07\n",
+      "numerical: 0.107477 analytic: 0.107477, relative error: 3.218863e-07\n",
+      "numerical: -1.141596 analytic: -1.141596, relative error: 7.472115e-08\n",
+      "numerical: 3.997488 analytic: 3.997488, relative error: 2.378305e-08\n",
+      "numerical: -0.544578 analytic: -0.544578, relative error: 2.016920e-08\n",
+      "numerical: 0.274369 analytic: 0.274369, relative error: 7.666643e-08\n",
+      "numerical: 0.373213 analytic: 0.373213, relative error: 6.969915e-08\n",
+      "numerical: -0.728364 analytic: -0.728364, relative error: 3.672522e-08\n",
+      "numerical: 2.600140 analytic: 2.600140, relative error: 4.840702e-09\n",
+      "numerical: -0.771947 analytic: -0.771947, relative error: 6.438740e-08\n",
+      "numerical: -4.556147 analytic: -4.556147, relative error: 2.132841e-09\n",
+      "numerical: 0.888001 analytic: 0.888001, relative error: 2.585708e-08\n",
+      "numerical: 3.104434 analytic: 3.104434, relative error: 8.966377e-09\n"
+     ]
+    }
+   ],
    "source": [
     "# Complete the implementation of softmax_loss_naive and implement a (naive)\n",
     "# version of the gradient that uses nested loops.\n",
@@ -219,9 +246,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "naive loss: 2.371611e+00 computed in 0.043883s\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "\"\\nfrom cs231n.classifiers.softmax import softmax_loss_vectorized\\ntic = time.time()\\nloss_vectorized, grad_vectorized = softmax_loss_vectorized(W, X_dev, y_dev, 0.000005)\\ntoc = time.time()\\nprint('vectorized loss: %e computed in %fs' % (loss_vectorized, toc - tic))\\n\\n# As we did for the SVM, we use the Frobenius norm to compare the two versions\\n# of the gradient.\\ngrad_difference = np.linalg.norm(grad_naive - grad_vectorized, ord='fro')\\nprint('Loss difference: %f' % np.abs(loss_naive - loss_vectorized))\\nprint('Gradient difference: %f' % grad_difference)\\n\""
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Now that we have a naive implementation of the softmax loss function and its gradient,\n",
     "# implement a vectorized version in softmax_loss_vectorized.\n",
@@ -242,7 +287,7 @@
     "# of the gradient.\n",
     "grad_difference = np.linalg.norm(grad_naive - grad_vectorized, ord='fro')\n",
     "print('Loss difference: %f' % np.abs(loss_naive - loss_vectorized))\n",
-    "print('Gradient difference: %f' % grad_difference)"
+    "print('Gradient difference: %f' % grad_difference)\n"
    ]
   },
   {
