--- a/assignment1/softmax.ipynb
+++ b/assignment1/softmax.ipynb
@@ -151,14 +151,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "loss: 2.371611\n",
+      "loss: 2.380346\n",
       "sanity check: 2.302585\n"
      ]
     }
@@ -197,33 +197,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "numerical: -0.476431 analytic: -0.476431, relative error: 1.847975e-08\n",
-      "numerical: 0.085244 analytic: 0.085244, relative error: 3.345259e-07\n",
-      "numerical: 0.903757 analytic: 0.903757, relative error: 5.967138e-08\n",
-      "numerical: -0.742614 analytic: -0.742614, relative error: 5.791287e-08\n",
-      "numerical: 1.263709 analytic: 1.263709, relative error: 7.744545e-08\n",
-      "numerical: 1.795868 analytic: 1.795868, relative error: 2.086808e-08\n",
-      "numerical: -0.247700 analytic: -0.247700, relative error: 5.634689e-08\n",
-      "numerical: -0.088726 analytic: -0.088726, relative error: 6.098763e-07\n",
-      "numerical: 0.107477 analytic: 0.107477, relative error: 3.218863e-07\n",
-      "numerical: -1.141596 analytic: -1.141596, relative error: 7.472115e-08\n",
-      "numerical: 3.997488 analytic: 3.997488, relative error: 2.378305e-08\n",
-      "numerical: -0.544578 analytic: -0.544578, relative error: 2.016920e-08\n",
-      "numerical: 0.274369 analytic: 0.274369, relative error: 7.666643e-08\n",
-      "numerical: 0.373213 analytic: 0.373213, relative error: 6.969915e-08\n",
-      "numerical: -0.728364 analytic: -0.728364, relative error: 3.672522e-08\n",
-      "numerical: 2.600140 analytic: 2.600140, relative error: 4.840702e-09\n",
-      "numerical: -0.771947 analytic: -0.771947, relative error: 6.438740e-08\n",
-      "numerical: -4.556147 analytic: -4.556147, relative error: 2.132841e-09\n",
-      "numerical: 0.888001 analytic: 0.888001, relative error: 2.585708e-08\n",
-      "numerical: 3.104434 analytic: 3.104434, relative error: 8.966377e-09\n"
+      "numerical: 1.968415 analytic: 1.968415, relative error: 2.702531e-08\n",
+      "numerical: 2.536896 analytic: 2.536896, relative error: 2.392170e-08\n",
+      "numerical: 0.697776 analytic: 0.697776, relative error: 4.990987e-08\n",
+      "numerical: -0.324563 analytic: -0.324563, relative error: 1.652181e-07\n",
+      "numerical: -1.829047 analytic: -1.829047, relative error: 1.408636e-08\n",
+      "numerical: -1.524075 analytic: -1.524075, relative error: 1.664961e-08\n",
+      "numerical: 1.451959 analytic: 1.451959, relative error: 4.748587e-08\n",
+      "numerical: -0.349911 analytic: -0.349911, relative error: 7.453214e-08\n",
+      "numerical: 3.561891 analytic: 3.561891, relative error: 4.744115e-10\n",
+      "numerical: -0.079817 analytic: -0.079817, relative error: 9.691947e-08\n",
+      "numerical: 2.020509 analytic: 2.020508, relative error: 1.108798e-08\n",
+      "numerical: -0.390130 analytic: -0.390130, relative error: 1.196435e-07\n",
+      "numerical: 2.562757 analytic: 2.562757, relative error: 7.483733e-09\n",
+      "numerical: 0.614631 analytic: 0.614630, relative error: 1.648524e-07\n",
+      "numerical: -4.244035 analytic: -4.244035, relative error: 8.128088e-09\n",
+      "numerical: 0.677348 analytic: 0.677348, relative error: 9.135353e-08\n",
+      "numerical: -1.780645 analytic: -1.780645, relative error: 6.245210e-09\n",
+      "numerical: 4.120905 analytic: 4.120905, relative error: 1.374898e-08\n",
+      "numerical: 2.652042 analytic: 2.652042, relative error: 4.029337e-08\n",
+      "numerical: -1.372204 analytic: -1.372204, relative error: 1.987110e-08\n"
      ]
     }
    ],
@@ -246,25 +246,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "naive loss: 2.371611e+00 computed in 0.043883s\n"
+      "naive loss: 2.380346e+00 computed in 0.043882s\n",
+      "vectorized loss: 2.380346e+00 computed in 0.004987s\n",
+      "Loss difference: 0.000000\n",
+      "Gradient difference: 361.905479\n"
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "\"\\nfrom cs231n.classifiers.softmax import softmax_loss_vectorized\\ntic = time.time()\\nloss_vectorized, grad_vectorized = softmax_loss_vectorized(W, X_dev, y_dev, 0.000005)\\ntoc = time.time()\\nprint('vectorized loss: %e computed in %fs' % (loss_vectorized, toc - tic))\\n\\n# As we did for the SVM, we use the Frobenius norm to compare the two versions\\n# of the gradient.\\ngrad_difference = np.linalg.norm(grad_naive - grad_vectorized, ord='fro')\\nprint('Loss difference: %f' % np.abs(loss_naive - loss_vectorized))\\nprint('Gradient difference: %f' % grad_difference)\\n\""
-      ]
-     },
-     "execution_count": 14,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
