--- a/assignment2/BatchNormalization.ipynb
+++ b/assignment2/BatchNormalization.ipynb
@@ -24,13 +24,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "tags": [
      "pdf-ignore"
     ]
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "=========== You can safely ignore the message below if you are NOT working on ConvolutionalNetworks.ipynb ===========\n",
+      "\tYou will need to compile a Cython extension for a portion of this assignment.\n",
+      "\tThe instructions to do this will be given in a section of the notebook below.\n",
+      "\tThere will be an option for Colab users and another for Jupyter (local) users.\n"
+     ]
+    }
+   ],
    "source": [
     "# As usual, a bit of setup\n",
     "import time\n",
@@ -63,13 +74,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
     "tags": [
      "pdf-ignore"
     ]
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "X_train:  (49000, 3, 32, 32)\n",
+      "y_train:  (49000,)\n",
+      "X_val:  (1000, 3, 32, 32)\n",
+      "y_val:  (1000,)\n",
+      "X_test:  (1000, 3, 32, 32)\n",
+      "y_test:  (1000,)\n"
+     ]
+    }
+   ],
    "source": [
     "# Load the (preprocessed) CIFAR10 data.\n",
     "data = get_CIFAR10_data()\n",
@@ -89,9 +113,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Before batch normalization:\n",
+      "  means:  [ -2.3814598  -13.18038246   1.91780462]\n",
+      "  stds:   [27.18502186 34.21455511 37.68611762]\n",
+      "\n",
+      "After batch normalization (gamma=1, beta=0)\n",
+      "  means:  [1.55431223e-17 8.27116153e-17 3.87884169e-17]\n",
+      "  stds:   [1. 1. 1.]\n",
+      "\n",
+      "After batch normalization (gamma= [1. 2. 3.] , beta= [11. 12. 13.] )\n",
+      "  means:  [11. 12. 13.]\n",
+      "  stds:   [1. 2. 3.]\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "# Check the training-time forward pass by checking means and variances\n",
     "# of features both before and after batch normalization   \n",
@@ -124,9 +167,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "After batch normalization (test-time):\n",
+      "  means:  [-0.0394346  -0.04364982 -0.10494243]\n",
+      "  stds:   [1.01947815 1.01606864 0.98208871]\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "# Check the test-time forward pass by running the training-time\n",
     "# forward pass many times to warm up the running averages, and then\n",
@@ -824,7 +878,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3.8.5 ('pytorch')",
    "language": "python",
    "name": "python3"
   },
@@ -838,7 +892,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.2"
+   "version": "3.8.5"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "0747f93ff6db21b2db2bf35ad4858dd0825b9c21797c41b4cc32097944ab3f10"
+   }
   }
  },
  "nbformat": 4,
