--- a/assignment3/StyleTransfer-PyTorch.ipynb
+++ b/assignment3/StyleTransfer-PyTorch.ipynb
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "tags": [
      "pdf-ignore"
@@ -72,11 +72,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
-    "tags": [
-     "pdf-ignore"
-    ]
+    "tags": []
    },
    "outputs": [],
    "source": [
@@ -85,7 +83,7 @@
     "CHECKS_PATH = None\n",
     "\n",
     "# Local\n",
-    "# CHECKS_PATH = 'style-transfer-checks.npz'\n",
+    "CHECKS_PATH = 'style-transfer-checks.npz'\n",
     "\n",
     "# Colab\n",
     "#CHECKS_PATH = '/content/drive/My Drive/{}/{}'.format(FOLDERNAME, 'style-transfer-checks.npz')\n",
@@ -111,11 +109,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
-    "tags": [
-     "pdf-ignore"
-    ]
+    "tags": []
    },
    "outputs": [],
    "source": [
@@ -126,13 +122,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {
     "tags": [
      "pdf-ignore"
     ]
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "d:\\Anaconda\\envs\\pytorch\\lib\\site-packages\\torchvision\\models\\_utils.py:208: UserWarning: The parameter 'pretrained' is deprecated since 0.13 and will be removed in 0.15, please use 'weights' instead.\n",
+      "  warnings.warn(\n",
+      "d:\\Anaconda\\envs\\pytorch\\lib\\site-packages\\torchvision\\models\\_utils.py:223: UserWarning: Arguments other than a weight enum or `None` for 'weights' are deprecated since 0.13 and will be removed in 0.15. The current behavior is equivalent to passing `weights=SqueezeNet1_1_Weights.IMAGENET1K_V1`. You can also use `weights=SqueezeNet1_1_Weights.DEFAULT` to get the most up-to-date weights.\n",
+      "  warnings.warn(msg)\n",
+      "Downloading: \"https://download.pytorch.org/models/squeezenet1_1-b8a52dc0.pth\" to C:\\Users\\86139/.cache\\torch\\hub\\checkpoints\\squeezenet1_1-b8a52dc0.pth\n",
+      "100%|██████████| 4.73M/4.73M [00:00<00:00, 9.63MB/s]\n"
+     ]
+    }
+   ],
    "source": [
     "# Load the pre-trained SqueezeNet model.\n",
     "cnn = torchvision.models.squeezenet1_1(pretrained=True).features\n",
@@ -600,7 +609,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3.8.5 ('pytorch')",
    "language": "python",
    "name": "python3"
   },
@@ -614,7 +623,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.7"
+   "version": "3.8.5"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "0747f93ff6db21b2db2bf35ad4858dd0825b9c21797c41b4cc32097944ab3f10"
+   }
   }
  },
  "nbformat": 4,
